# MovieBall

./: .gitignore  CMakeLists.txt  MovieBallSFML.cpp  MovieBallSFML.hpp  algorithm.odt  engine.h  ico.c  icosahedron.c  main.c  main.cpp  makeProject.sh  shader.xmcd  toolchain.txt  xyz.c
MovieBall-iOS/MovieBall/: main.m
MovieBall-iOS/MovieBall.xcodeproj/: project.pbxproj
MovieBall-iOS/MovieBall.xcworkspace/: contents.xcworkspacedata
SPHERE.xcworkspace/: contents.xcworkspacedata
SPHERE.xcworkspace/xcuserdata/igorkoznov.xcuserdatad/: UserInterfaceState.xcuserstate
SPHERE.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
SphereIOS/: .gitignore
SphereIOS/SphereIOS/: AppDelegate.h  AppDelegate.m  SimpleFragment.glsl  SimpleVertex.glsl  SphereIOS-Info.plist  SphereIOS-Prefix.pch  SphereView.h  SphereView.m
SphereIOS/SphereIOS.xcodeproj/: project.pbxproj
SphereIOS/SphereIOS.xcodeproj/project.xcworkspace/xcuserdata/igorkoznov.xcuserdatad/: UserInterfaceState.xcuserstate
SphereIOS/SphereIOS.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
abc.xcworkspace/: contents.xcworkspacedata
abc.xcworkspace/xcuserdata/igorkoznov.xcuserdatad/: UserInterfaceState.xcuserstate
cdash/: awesomebox.cdash.xml  slave.sh
docs/: algorithm.odt  mathUTF8.tex  mathtest.tex  pic1.odg  rumathbr.sty  sphere.odt  sphere.tex
engine/: CMakeLists.txt  HelloIOS.cpp  config.hpp.in  engine.c  engine.h  icosahedron.c  icosahedron.h  xyz.c
engine/shaders/: SimpleFragment.glsl
engine/test/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt  main.c
iOS_FrontEnd/: .gitignore
iOS_FrontEnd/SphereIOS/: RedBlack.h  SimpleVertex.glsl  SphereView.h  SphereView.m  icosahedron.h  icosahedron.m  mStr.h  main.m  movie.c  movie.h  tomatoes.c  tomatoes.h
iOS_FrontEnd/SphereIOS.xcodeproj/: project.pbxproj
iOS_FrontEnd/SphereIOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS_FrontEnd/SphereIOS.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
iOS_FrontEnd/SphereIOS.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: SphereIOS.xcscheme  xcschememanagement.plist
iOS_FrontEnd/tmp/: CMakeCache.txt  cmake_install.cmake
iOS_FrontEnd/tmp/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  model_postBuildPhase.makeRelWithDebInfo
iOS_FrontEnd/tmp/MODEL.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-54372AC5E2424127B6586AC1.sh
iOS_FrontEnd/tmp/MODEL.xcodeproj/: project.pbxproj
iOS_FrontEnd/tmp/MODEL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/: .gitignore
ios/ios/: AppDelegate.h  AppDelegate.m  SphereViewController.h  SphereViewController.m  ViewController.h  ViewController.m  ios-Prefix.pch  main.m
ios/ios.xcodeproj/: project.pbxproj
ios/ios/ios.xcodeproj/: project.pbxproj
libsUNIVERSAL/: .gitignore  build-libcurl.sh  build-libraries.sh  build-libz.sh
model/: CMakeLists.txt  model.c  model.h
movies/: movies.json
movies/tomatoes/: .gitignore
movies/tomatoes/test/: .gitignore  CMakeCache.txt  CMakeLists.txt  RedBlack.c  allocator.hpp  cmake_install.cmake  main.c  pool.cpp  red-black.c  test.1
movies/tomatoes/test/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  pool_postBuildPhase.makeRelWithDebInfo  treeEx_postBuildPhase.makeRelWithDebInfo  tree_postBuildPhase.makeRelease
movies/tomatoes/test/Debug/: pool  treeEx
movies/tomatoes/test/Pool.xcodeproj/: project.pbxproj
movies/tomatoes/test/RED_BLACK_TREE.xcodeproj/: project.pbxproj
movies/tomatoes/tomatoes/: RedBlack.h  RedBlackMovie.c  RootViewController.h  RootViewController.m  mStr.h  movie.c  tomatoes-Info.plist  tomatoes.c  tomatoes.cpp  tomatoes.h
movies/tomatoes/tomatoes.xcodeproj/: project.pbxproj
old/: CMakeLists.txt  buildWorkSpace.sh
old/SPHERE.xcworkspace/: contents.xcworkspacedata
old/docs/: .gitignore
old/engine/: CMakeLists.txt  TargetConditionals.h  xyz.h
old/hello/: hello.c
old/iOS_FrontEnd/SphereIOS/: AppDelegate.h  SphereView.m  mStr.c  movie.c  movie.h  tomatoes.c  tomatoes.h
old/ios/: .gitignore
old/ios/ios/: AppDelegate.m
old/model/: model.h
old/movies/: root.json  toyStory.json
old/movies/tomatoes/test/: AllocatorTest.cpp  alloc.cpp  main.c  pool.cpp  red-black.c
old/movies/tomatoes/tomatoes/: AppDelegate.h  AppDelegate.m  main.m  movie.c  movie.h  tomatoes-Prefix.pch
old/movies/tomatoes/tomatoes.xcodeproj/: project.pbxproj
old/testbed/: CMakeLists.txt
testbed/: CMakeLists.txt  engine.c  engine.h  icosahedron.c  icosahedron.h  main.c  xyz.c
testbed/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
xcode-cmake-lib/: CMakeLists.txt  CTestConfig.cmake  HelloIOS.c  MovieBallSFML.hpp  main.cpp
xcode-cmake-lib/MovieBall-iOS/: .gitignore
xcode-cmake-lib/MovieBall-iOS/MovieBall/: AppDelegate.h  AppDelegate.mm  MovieBall-Info.plist
xcode-cmake-lib/MovieBall-iOS/MovieBall.xcodeproj/: project.pbxproj
xcode-cmake-lib/MovieBall-iOS/MovieBall.xcodeproj/project.xcworkspace/xcshareddata/: MovieBall.xccheckout
xcode-cmake-lib/MovieBall/MovieBall/: AppDelegate.m
xcode-cmake-lib/MovieBall/MovieBall.xcodeproj/: project.pbxproj
xcode-cmake-lib/MovieBall/MovieBall.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode-cmake-lib/MovieBall/MovieBall.xcodeproj/project.xcworkspace/xcshareddata/: MovieBall.xccheckout
xcode-cmake-lib/MovieBall/MovieBall.xcodeproj/project.xcworkspace/xcuserdata/igorkoznov.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-cmake-lib/MovieBall/MovieBall.xcodeproj/xcuserdata/igorkoznov.xcuserdatad/xcschemes/: MovieBall.xcscheme  xcschememanagement.plist
xcode-cmake-lib/cdash/: awesomebox.ctest  client.ctest
xcode-cmake-lib/engine/: CMakeLists.txt  HelloIOS.cpp  HelloIOS.hpp  config.hpp.in
xcode-cmake-lib/engine/test/: CMakeLists.txt  main.cpp  main1.cpp
(+48 files in other folders)
